--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "creating-short-links",
   "version": "0.1.0",
+  "homepage": "https://savelyevdmitry.github.io/Creating-short-link",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
@@ -28,7 +29,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
